// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots GridX Gutters Margin gutter 1`] = `
<XYGridElement
  alignX="left"
  className="gc-gridx"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="margin"
    key=".0"
    large={4}
    medium={6}
    vertical={false}
  >
    12/6/4 cells
  </Cell>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="margin"
    key=".1"
    large={8}
    medium={6}
    vertical={false}
  >
    12/6/8 cells
  </Cell>
</XYGridElement>
`;

exports[`Storyshots GridX Gutters Padding gutter 1`] = `
<XYGridElement
  alignX="left"
  className="gc-gridx"
  gridDirection="horizontal"
  gutterSizes={
    Object {
      "medium": "30px",
      "small": "20px",
    }
  }
  wrap={true}
>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".0"
    large={4}
    medium={6}
    vertical={false}
  >
    12/6/4 cells
  </Cell>
  <Cell
    gridColumns={12}
    gutterSizes={
      Object {
        "medium": "30px",
        "small": "20px",
      }
    }
    gutterType="padding"
    key=".1"
    large={8}
    medium={6}
    vertical={false}
  >
    12/6/8 cells
  </Cell>
</XYGridElement>
`;
